--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@tanstack/react-query": "^4.29.14",
+    "formik": "^2.4.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-cluster": "^2.1.0",
-    "formik": "^2.4.2"
+    "react-leaflet-cluster": "^2.1.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
