--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "typeorm": "^0.3.16",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
