--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@tanstack/react-query": "^4.29.14",
+    "datejs": "^1.0.0-rc3",
     "formik": "^2.4.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
